--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
        <h1>ТГПУ</h1>
-       <img src='gerbtspu118.png">
-    
+       <img src='gerbtspu118.png'>
+
        <p>Я учусь в <a href=https://www.tspu.ru>ТГПУ</a></p>
 
         </body>
